# kg-g

./: Cargo.toml  frames.aseprite  index.html
.github/workflows/: rust.yml
src/: actor.rs  ai.rs  animation.rs  cd.rs  display.rs  main.rs  movable.rs  physics.rs  player.rs  projectile.rs  timer.rs  utils.rs
src/stage_module/: game_over.rs  main_menu.rs  mod.rs  playing.rs  resources.rs  stage_stack.rs
src/systems/: ai.rs  animation.rs  cd.rs  mod.rs  timer.rs
src/world/: actor.rs  damage.rs  mod.rs  movable.rs  projectile.rs  world.rs
src/world_module/: actor.rs  damage.rs  mod.rs  movable.rs  particle.rs  projectile.rs  world.rs
